--- a/app/src/main/res/navigation/nav_grap.xml
+++ b/app/src/main/res/navigation/nav_grap.xml
@@ -23,5 +23,8 @@
         <action
             android:id="@+id/action_recyclerElementosFragment_to_mostrarElementosFragment"
             app:destination="@id/mostrarElementosFragment" />
+        <action
+            android:id="@+id/action_recyclerElementosFragment_to_nuevoElementoFragment"
+            app:destination="@id/nuevoElementoFragment" />
     </fragment>
 </navigation>
